[TEST] add tmate debug session string